# egemeister

./: .gitignore
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  attempt.py  profile.py  session.py  subject.py  task.py  topic.py  user.py
backend/app/schemas/: attempt.py  profile.py  session.py  subject.py  task.py  topic.py  user.py
