[project]
name = "egemeister"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim", email = "newbiestorm@icloud.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"